--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: ubuntu:20.04
 
 build:
   before_script:
+    - apt update && sudo apt install git cmake ninja-build build-essential libgl-dev libxinerama-dev libxcursor-dev libxi-dev
     - mkdir build && cd build
   script:
-    - cmake .. && make -j2
+    - cmake -G"Ninja" .. && ninja
