Add environment var

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,9 @@
 image: ubuntu:20.04
 
 build:
+  variables:
+    DEPLOY_VARIABLE: "noninteractive"
   before_script:
-    - DEBIAN_FRONTEND=noninteractive apt-get update
     - apt update && apt install -y git cmake ninja-build build-essential libgl-dev libxinerama-dev libxcursor-dev libxi-dev
     - mkdir build && cd build
   script:
