--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,9 @@
 image: ubuntu:20.04
 
 build:
-  variables:
-    DEPLOY_VARIABLE: "noninteractive"
   before_script:
-    - apt update && apt install -y git cmake ninja-build build-essential libgl-dev libxinerama-dev libxcursor-dev libxi-dev
+    - apt update
+    - DEBIAN_FRONTEND=noninteractive apt install -y git cmake ninja-build build-essential libgl-dev libxinerama-dev libxcursor-dev libxi-dev
     - mkdir build && cd build
   script:
     - cmake -G"Ninja" .. && ninja
