--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,13 +7,14 @@ add_subdirectory(libs/cpp-tsdb)
 
 find_package(glfw3 REQUIRED)
 find_package(glad REQUIRED)
+find_package(glm REQUIRED)
 
 add_executable(glot
 	src/glot.cpp
 	src/shader.cpp
 	src/shader_program.cpp)
 
-target_link_libraries(glot glfw::glfw glad::glad)
+target_link_libraries(glot glfw::glfw glad::glad glm::glm)
 
 # Copy the shaders over to the build dir
 configure_file(shaders/vertex.glsl . COPYONLY)
