--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,26 @@
 image: python:bullseye
 
+stages:
+  - build
+  - test
+
 build:
   before_script:
     - apt update
     - DEBIAN_FRONTEND=noninteractive apt install -y cmake build-essential
     - pip3 install conan
+    - conan profile update settings.compiler.libcxx=libstdc++11 default
     - mkdir build && cd build
     - CONAN_SYSREQUIRES_SUDO=0 CONAN_SYSREQUIRES_MODE=enabled conan install ..
   script:
     - cmake -DCMAKE_MODULE_PATH=${PWD} ..
     - cmake --build .
+
+test:
+  before_script:
+    - apt update
+    - DEBIAN_FRONTEND=noninteractive apt install -y cmake
+  script:
+    - ctest
+  needs:
+    - build
