--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
   - test
 
 build:
+  stage: build
   before_script:
     - apt update
     - DEBIAN_FRONTEND=noninteractive apt install -y cmake build-essential
@@ -17,6 +18,7 @@ build:
     - cmake --build .
 
 test:
+  stage: test
   before_script:
     - apt update
     - DEBIAN_FRONTEND=noninteractive apt install -y cmake
