--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ build:
     - apt update
     - DEBIAN_FRONTEND=noninteractive apt install -y cmake build-essential
     - pip3 install conan
-    - conan profile update settings.compiler.libcxx=libstdc++11 default
+    - conan profile new default --detect && conan profile update settings.compiler.libcxx=libstdc++11 default
     - mkdir build && cd build
     - CONAN_SYSREQUIRES_SUDO=0 CONAN_SYSREQUIRES_MODE=enabled conan install ..
   script:
