Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ test:
   script:
     - cd build
     - ctest --output-junit dump.xml
+    - find | grep dump.xml
   needs:
     - build
   artifacts:
