Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,8 @@ test:
   needs:
     - build
   artifacts:
-    - glot
+    paths:
+      - glot
   #   when: always
   #   reports:
   #     junit: build/libs/cpp-tsdb/dump.xml
