--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -8,6 +8,8 @@ jobs:
       - run: pip3 install conan
       - run: conan profile new default --detect && conan profile update settings.compiler.libcxx=libstdc++11 default
       - run: mkdir build && cd build
+      - run: pwd
+      - run: find
       - run: CONAN_SYSREQUIRES_SUDO=0 CONAN_SYSREQUIRES_MODE=enabled conan install ..
       - run: cmake -DCMAKE_MODULE_PATH=${PWD} ..
       - run: cmake --build .
