--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -4,12 +4,16 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: sudo apt update && DEBIAN_FRONTEND=noninteractive sudo apt install -y cmake build-essential python3-pip
-      - run: pip3 install conan
-      - run: conan profile new default --detect && conan profile update settings.compiler.libcxx=libstdc++11 default
-      - run: mkdir build && cd build
-      - run: pwd
-      - run: find
-      - run: CONAN_SYSREQUIRES_SUDO=0 CONAN_SYSREQUIRES_MODE=enabled conan install ..
-      - run: cmake -DCMAKE_MODULE_PATH=${PWD} ..
-      - run: cmake --build .
+      - name: setup
+        run: |
+          sudo apt update
+          DEBIAN_FRONTEND=noninteractive sudo apt install -y cmake build-essential python3-pip
+          pip3 install conan
+          conan profile new default --detect && conan profile update settings.compiler.libcxx=libstdc++11 default
+          mkdir build && cd build
+      - name: build
+        working-directory: ./build
+        run: |
+          CONAN_SYSREQUIRES_SUDO=0 CONAN_SYSREQUIRES_MODE=enabled conan install ..
+          cmake -DCMAKE_MODULE_PATH=${PWD} ..
+          cmake --build .
