--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -12,8 +12,9 @@ jobs:
           conan profile new default --detect && conan profile update settings.compiler.libcxx=libstdc++11 default
           mkdir build && cd build
       - name: build
-        working-directory: ./build
+#         working-directory: ./build
         run: |
+          cd build
           CONAN_SYSREQUIRES_SUDO=0 CONAN_SYSREQUIRES_MODE=enabled conan install ..
           cmake -DCMAKE_MODULE_PATH=${PWD} ..
           cmake --build .
