--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -4,14 +4,16 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - name: setup
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Provision
         run: |
           sudo apt update
           DEBIAN_FRONTEND=noninteractive sudo apt install -y cmake build-essential python3-pip
           pip3 install conan
           conan profile new default --detect && conan profile update settings.compiler.libcxx=libstdc++11 default
           mkdir build && cd build
-      - name: build
+      - name: Build
 #         working-directory: ./build
         run: |
           cd build
