--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,7 +21,10 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Provision
-      run: CONAN_SYSREQUIRES_MODE=enabled conan install -if ${{github.workspace}}/build .
+      run: |
+        pip install conan
+        conan profile new default --detect && conan profile update settings.compiler.libcxx=libstdc++11 default
+        CONAN_SYSREQUIRES_MODE=enabled conan install -if ${{github.workspace}}/build .
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
