--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,16 +20,19 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
+    - name: Install Conan
+      id: conan
+      uses: turtlebrowser/get-conan@main
+    
     - name: Provision
       run: |
-        pip install conan
         conan profile new default --detect && conan profile update settings.compiler.libcxx=libstdc++11 default
         CONAN_SYSREQUIRES_MODE=enabled conan install -if ${{github.workspace}}/build .
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_MODULE_PATH=${{github.workspace}}/build
 
     - name: Build
       # Build your program with the given configuration
