--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,46 @@
-name: CI
-on: [push]
+name: CMake
+
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+env:
+  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
+  BUILD_TYPE: Release
+
 jobs:
-  Explore-GitHub-Actions:
+  build:
+    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
+    # You can convert this to a matrix build if you need cross-platform coverage.
+    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Provision
-        run: |
-          sudo apt update
-          DEBIAN_FRONTEND=noninteractive sudo apt install -y cmake build-essential python3-pip
-          pip3 install conan
-          conan profile new default --detect && conan profile update settings.compiler.libcxx=libstdc++11 default
-          mkdir build && cd build
-      - name: Build
-        working-directory: ./build
-        run: |
-          CONAN_SYSREQUIRES_MODE=enabled conan install ..
-          cmake -DCMAKE_MODULE_PATH=${PWD} ..
-          cmake --build .
-      - name: Test
-        working-directory: ./build
-        run: ctest
+    - uses: actions/checkout@v2
+    
+    - name: Install Conan
+      id: conan
+      uses: turtlebrowser/get-conan@main
+    
+    - name: Provision
+      run: |
+        conan profile new default --detect && conan profile update settings.compiler.libcxx=libstdc++11 default
+        CONAN_SYSREQUIRES_MODE=enabled conan install -if ${{github.workspace}}/build .
+
+    - name: Configure CMake
+      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_MODULE_PATH=${{github.workspace}}/build
+
+    - name: Build
+      # Build your program with the given configuration
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+
+    - name: Test
+      working-directory: ${{github.workspace}}/build
+      # Execute tests defined by the CMake configuration.  
+      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+      run: ctest -C ${{env.BUILD_TYPE}}
+      
