--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       id: conan
       uses: turtlebrowser/get-conan@main
     
-    - name: Provision
+    - name: Install Deps
       run: |
         conan profile new default --detect && conan profile update settings.compiler.libcxx=libstdc++11 default
         CONAN_SYSREQUIRES_MODE=enabled conan install -if ${{github.workspace}}/build .
