--- a/libs/cpp-tsdb/CMakeLists.txt
+++ b/libs/cpp-tsdb/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.16)
 project(tsdb)
 
-find_package(GTest REQUIRED)
-find_package(Boost REQUIRED COMPONENTS timer)
+option(BUILD_TESTS "Build test programs" OFF)
+option(TSDB_BUILD_EXAMPLES "Buld example binaries" OFF)
 
 add_library(tsdb INTERFACE)
 target_include_directories(
@@ -10,7 +10,23 @@ target_include_directories(
 	INTERFACE include
 )
 
-option(TSDB_BUILD_EXAMPLES "Buld example binaries" OFF)
+if (BUILD_TESTS)
+	find_package(GTest REQUIRED)
+	find_package(Boost REQUIRED COMPONENTS timer)
+
+	enable_testing()
+	add_executable(test_tsdb test/test.cpp)
+
+	target_link_libraries(
+		test_tsdb
+		PRIVATE
+			tsdb
+			Boost::timer
+			GTest::GTest
+	)
+
+	add_test(NAME AllTests COMMAND test_tsdb)
+endif()
 
 if (TSDB_BUILD_EXAMPLES)
 	add_executable(example example.cpp)
@@ -20,17 +36,3 @@ if (TSDB_BUILD_EXAMPLES)
 			tsdb
 			Boost::timer)
 endif()
-
-enable_testing()
-
-add_executable(test_tsdb test/test.cpp)
-
-target_link_libraries(
-	test_tsdb
-	PRIVATE
-		tsdb
-		Boost::timer
-		GTest::GTest
-)
-
-add_test(NAME AllTests COMMAND test_tsdb)
