--- a/libs/cpp-tsdb/CMakeLists.txt
+++ b/libs/cpp-tsdb/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 project(tsdb)
 
 option(BUILD_TESTS "Build test programs" OFF)
+option(BUILD_COVERAGE "Build with coverage info" OFF)
 option(TSDB_BUILD_EXAMPLES "Buld example binaries" OFF)
 
 add_library(tsdb INTERFACE)
@@ -24,6 +25,28 @@ if (BUILD_TESTS)
 			Boost::timer
 			GTest::GTest
 	)
+	
+	if (BUILD_COVERAGE)
+		target_link_libraries(
+			test_tsdb
+			PRIVATE
+				tsdb
+				Boost::timer
+				GTest::GTest
+				gcov
+		)
+
+		target_compile_options(test_tsdb PRIVATE -fprofile-arcs -ftest-coverage)
+	else()
+		target_link_libraries(
+			test_tsdb
+			PRIVATE
+				tsdb
+				Boost::timer
+				GTest::GTest
+		)
+	endif()
+
 
 	add_test(NAME AllTests COMMAND test_tsdb)
 endif()
