Archive example png in gitlabci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ focal:
   artifacts:
     paths:
       - build
+      - screenshot.png
     reports:
       cobertura: build/coverage.xml
       junit: build/test.xml
