--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,9 +30,9 @@ focal:
       junit: build/test.xml
 
 pages:
+  needs: focal
   stage: pages
   script:
-    - mkdir ${CI_PROJECT_DIR}/public
     - cp -r ${CI_PROJECT_DIR}/pages ${CI_PROJECT_DIR}/public
   artifacts:
     paths:
