Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ pages:
   stage: pages
   script:
     - cp -r ${CI_PROJECT_DIR}/pages ${CI_PROJECT_DIR}/public
-    - cp ${CI_PROJECT_DIR}/build/coverge*html ${CI_PROJECT_DIR}/public
+    - cp ${CI_PROJECT_DIR}/build/coverage*html ${CI_PROJECT_DIR}/public
   artifacts:
     paths:
       - public
