--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,3 +41,8 @@ pages:
   artifacts:
     paths:
       - public
+  environment:
+      name: Develop
+      url: "https://$CI_PROJECT_NAMESPACE.gitlab.io/-/$CI_PROJECT_NAME/-/jobs/$CI_JOB_ID/artifacts/public/index.html"
+  variables:
+    PUBLIC_URL: "/-/$CI_PROJECT_NAME/-/jobs/$CI_JOB_ID/artifacts/public"
