Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ pages:
   stage: report
   script:
     - cp -r ${CI_PROJECT_DIR}/pages ${CI_PROJECT_DIR}/public
-    - cp ${CI_PROJECT_DIR}/build/coverage/*html ${CI_PROJECT_DIR}/public
+    - cp ${CI_PROJECT_DIR}/build/coverage*html ${CI_PROJECT_DIR}/public
     - doxygen Doxyfile
     - mv html public/
   artifacts:
