Added font renderer and created a nice looking bitmap font

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,5 @@ configure_file(shaders/char_vert.glsl char_vert.glsl COPYONLY)
 configure_file(shaders/char_frag.glsl char_frag.glsl COPYONLY)
 
 configure_file(font.png font.png COPYONLY)
+
+add_subdirectory(src/fontgen)
