Started making the graph renderer more efficient using fewer draw calls

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,9 @@ add_executable(glot
 	src/bindings/imgui_impl_opengl3.cpp
 	src/bindings/imgui_impl_glfw.cpp
 	src/shader.cpp
-	src/shader_program.cpp)
+	src/shader_program.cpp
+	src/graph.cpp
+	src/font.cpp)
 
 target_link_libraries(glot glfw::glfw glad::glad glm::glm imgui::imgui)
 
