Fixed font not loading bug, and switched from tga to png

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,6 @@ configure_file(shaders/simple/fragment.glsl simple_fragment.glsl COPYONLY)
 configure_file(shaders/char_vert.glsl char_vert.glsl COPYONLY)
 configure_file(shaders/char_frag.glsl char_frag.glsl COPYONLY)
 
-configure_file(font.tga font.tga COPYONLY)
+configure_file(font.png font.png COPYONLY)
 
 add_subdirectory(src/fontgen)
