Moved plot into it's own class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,8 @@ add_executable(glot
 	src/bindings/imgui_impl_glfw.cpp
 	src/shader.cpp
 	src/shader_program.cpp
-	src/graph.cpp)
+	src/graph.cpp
+	src/plot.cpp)
 
 target_link_libraries(glot glfw::glfw glad::glad glm::glm imgui::imgui)
 
