Added a resource manager + tidied up resource files + added spdlog

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(glfw3 REQUIRED)
 find_package(glad REQUIRED)
 find_package(glm REQUIRED)
 find_package(imgui REQUIRED)
+find_package(spdlog REQUIRED)
 
 add_executable(glot
 	src/glot.cpp
@@ -25,19 +26,24 @@ add_executable(glot
 	src/graph.cpp
 	src/plot.cpp)
 
-target_link_libraries(glot glfw::glfw glad::glad glm::glm imgui::imgui)
+target_link_libraries(
+	glot
+	glfw::glfw
+	glad::glad
+	glm::glm
+	imgui::imgui
+	spdlog::spdlog)
 
 # Copy the shaders over to the build dir
-configure_file(shaders/vertex.glsl . COPYONLY)
-configure_file(shaders/geometry.glsl . COPYONLY)
-configure_file(shaders/fragment.glsl . COPYONLY)
+configure_file(shaders/plot/vertex.glsl plot/vertex.glsl COPYONLY)
+configure_file(shaders/plot/geometry.glsl plot/geometry.glsl COPYONLY)
+configure_file(shaders/plot/fragment.glsl plot/fragment.glsl COPYONLY)
 
-configure_file(shaders/simple/vertex.glsl simple_vertex.glsl COPYONLY)
-configure_file(shaders/simple/fragment.glsl simple_fragment.glsl COPYONLY)
+configure_file(shaders/line/vertex.glsl line/vertex.glsl COPYONLY)
+configure_file(shaders/line/fragment.glsl line/fragment.glsl COPYONLY)
 
-configure_file(shaders/char_vert.glsl char_vert.glsl COPYONLY)
-configure_file(shaders/char_frag.glsl char_frag.glsl COPYONLY)
-
-configure_file(font.png font.png COPYONLY)
+configure_file(shaders/glyph/vertex.glsl glyph/vertex.glsl COPYONLY)
+configure_file(shaders/glyph/fragment.glsl glyph/fragment.glsl COPYONLY)
+configure_file(fonts/proggy_clean.png fonts/proggy_clean.png COPYONLY)
 
 add_subdirectory(src/fontgen)
