Added some more benchmarks for timeseries

--- a/src/glot/CMakeLists.txt
+++ b/src/glot/CMakeLists.txt
@@ -55,5 +55,5 @@ if (BUILD_TESTS)
 			glot
 			benchmark::benchmark
 	)
-	add_test(NAME AllTests COMMAND bench)
+	add_test(NAME Benchmarks COMMAND bench)
 endif()
