--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,11 @@ project(glot)
 
 set(CMAKE_CXX_STANDARD 17)
 
+# Note: We need to enable testing at the top level to generate the test file at the root of the build dir
+if (BUILD_TESTS)
+	enable_testing()
+endif()
+
 option(BUILD_TESTS "Build test programs" OFF)
 option(BUILD_BENCHMARKS "Build benchmark programs" OFF)
 option(BUILD_COVERAGE "Build with coverage instrumentation" OFF)
