--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Coverage
       working-directory: ${{github.workspace}}/build
-      run: gcovr --root .. --xml --output coverage.xml
+      run: gcovr --root .. --xml --output coverage.xml --exclude '.*/stb_image.h'
 
     - uses: codecov/codecov-action@v2
       with:
