--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         fail_ci_if_error: true # optional (default = false)
         verbose: true # optional (default = false)
 
-  Prod:
+  Ubuntu:
     runs-on: ubuntu-latest
 
     steps:
@@ -79,3 +79,34 @@ jobs:
         name: app
         path: |
           ${{github.workspace}}/build/src/glot/glotapp
+  
+  Windows:
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Install Conan
+      id: conan
+      uses: turtlebrowser/get-conan@main
+    
+    - name: Install Deps
+      run: |
+        conan profile new default --detect && conan profile update settings.compiler.libcxx=libstdc++11 default
+        CONAN_SYSREQUIRES_MODE=enabled conan install -if ${{github.workspace}}/build .
+
+    - name: Configure CMake
+      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Release -DCMAKE_MODULE_PATH=${{github.workspace}}/build
+
+    - name: Build
+      # Build your program with the given configuration
+      run: cmake --build ${{github.workspace}}/build
+
+    # - name: Archive production artifacts
+    #   uses: actions/upload-artifact@v3
+    #   with:
+    #     name: app
+    #     path: |
+    #       ${{github.workspace}}/build/src/glot/glotapp
