--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,7 +92,7 @@ jobs:
     
     - name: Install Deps
       run: |
-        conan install -if ${{github.workspace}}/build .
+        conan install -if ${{github.workspace}}/build --build=missing .
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
