--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,9 +80,8 @@ jobs:
   #       path: |
   #         ${{github.workspace}}/build/src/glot/glotapp
   
-  Windows:
+  windows:
     runs-on: windows-latest
-
     steps:
     - uses: actions/checkout@v2
 
@@ -97,11 +96,11 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Release -DCMAKE_MODULE_PATH=${{github.workspace}}/build
+      run: cmake -B ${{github.workspace}}\build -DCMAKE_BUILD_TYPE=Release "-DCMAKE_MODULE_PATH=$('${{github.workspace}}\build' -replace '\\', '/')"
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build
+      run: cmake --build ${{github.workspace}}\build
 
     # - name: Archive production artifacts
     #   uses: actions/upload-artifact@v3
