--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: ci
 on: push
 
 jobs:
-  test:
+  Test:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
@@ -49,7 +49,7 @@ jobs:
         fail_ci_if_error: true # optional (default = false)
         verbose: true # optional (default = false)
 
-  ubuntu:
+  Ubuntu:
     runs-on: ubuntu-latest
 
     steps:
@@ -80,7 +80,7 @@ jobs:
         path: |
           ${{github.workspace}}/build/src/glot/glotapp
   
-  windows:
+  Windows:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
